--- a/back/package.json
+++ b/back/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dvmhmdsd/deutsland.git"
+    "url": "https://github.com/dvmhmdsd/deutsland.git"
   },
   "keywords": [
     "react",
