Handle news image save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,13 @@
         "deutsland",
         "dt",
         "dtpedia",
+        "image",
         "page",
         "pedia",
         "resave",
+        "resizer",
         "sama",
-        "submodules"
+        "submodules",
+        "uploader"
     ]
 }
