--- a/back/package.json
+++ b/back/package.json
@@ -27,8 +27,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.9.2",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sharp": "^0.24.1",
+    "uuid": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
