--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && mkdir back/public && mv dist/* back/public",
+    "deploy": "npm run build && mv dist/* back/public",
     "dev-start": "concurrently \"cd back && nodemon\" \"npm start\""
   },
   "eslintConfig": {
