--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "deutsland",
         "dt",
         "dtpedia",
+        "fortawesome",
         "image",
         "page",
         "pedia",
@@ -10,6 +11,7 @@
         "resizer",
         "sama",
         "submodules",
+        "unstyled",
         "uploader"
     ]
 }
