--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "3.4.0",
     "react-wow": "^1.0.0"
   },
+  "proxy": "http://localhost:5000/api",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
