--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-wow": "^1.0.0"
+    "react-wow": "^1.0.0",
+    "swiper": "^5.3.6"
   },
   "proxy": "http://localhost:5000/api",
   "scripts": {
