Finish services component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "dt",
         "dtpedia",
         "fortawesome",
+        "greyscale",
         "image",
         "page",
         "pedia",
