--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "npm run build && mv dist/* back/public",
-    "dev-start": "concurrently \"cd back && nodemon\" \"npm start\""
+    "dev-start": "concurrently \"cd back && node index.js\" \"npm start\""
   },
   "eslintConfig": {
     "extends": "react-app"
