--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "http-proxy-middleware": "^1.0.1",
     "jquery": "^3.4.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-wow": "^1.0.0",
-    "swiper": "^5.3.6"
+    "react-wow": "^1.0.0"
   },
-  "proxy": "http://localhost:5000/api",
+  "proxy": "http://localhost:5000/api/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
