Control the interval of services slider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "component",
         "deutsland",
         "dt",
         "dtpedia",
@@ -12,7 +13,9 @@
         "resizer",
         "sama",
         "submodules",
+        "unmount",
         "unstyled",
-        "uploader"
+        "uploader",
+        "will"
     ]
 }
