--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,11 @@
         "deutsland",
         "dt",
         "dtpedia",
+        "fa",
         "fortawesome",
         "greyscale",
         "image",
+        "linkedin",
         "page",
         "pedia",
         "resave",
