--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "resave",
         "resizer",
         "sama",
+        "setex",
         "submodules",
         "unmount",
         "unstyled",
