--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-wow": "^1.0.0"
+    "react-wow": "^1.0.0",
+    "redis": "^3.0.2"
   },
   "proxy": "http://localhost:5000/api/",
   "scripts": {
