--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "google-maps-react": "^2.0.2",
     "http-proxy-middleware": "^1.0.1",
     "jquery": "^3.4.1",
     "react": "^16.13.0",
