--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-wow": "^1.0.0",
-    "redis": "^3.0.2"
+    "react-wow": "^1.0.0"
   },
   "proxy": "http://localhost:5000/api/",
   "scripts": {
