--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "start": "pm2-runtime start ecosystem.config.js --env production"
   },
   "repository": {
     "type": "git",
@@ -23,13 +23,17 @@
   "homepage": "https://github.com/dvmhmdsd/deutsland#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.9.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pm2": "^4.2.3",
+    "prerender-node": "^3.2.5",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
