--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "rm -rf back/public && mkdir back/public && npm run build && mv build/* back/public && rm -rf build && cd back/ && git add . && git commit -m 'Edits' && git push heroku master && cd ..",
+    "win-deploy": "rm -rf back/public && mkdir back/public && npm run build && move build/* back/public && rm -rf build && cd back/ && git add . && git commit -m 'Edits' && git push heroku master && cd ..",
     "dev-start": "concurrently \"cd back && nodemon\" \"npm start\""
   },
   "eslintConfig": {
